k8s/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: splitwise-local
spec:
  ingressClassName: traefik
  rules:
    - host: splitwise-prod.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: splitwise-export
                port:
                  number: 80
